# GameSpriteForge

./: .gitignore  .impeccable.md  Cargo.toml  GAME-SPRITE-FORGE-DEVELOPMENT-PLAN-2026-05-31.md  GAME-SPRITE-FORGE-PROJECT-DIRECTION-2026-05-31.md  GAME-SPRITE-FORGE-UI-DESIGN-SPEC.md  PRODUCT.md  README.md  README.zh-CN.md  design-qa.md  package-lock.json  package.json
apps/mac/src-tauri/: Cargo.toml  tauri.conf.json
apps/mac/src-tauri/capabilities/: default.json
apps/mac/src-tauri/src/: lib.rs  main.rs
apps/mac/src-tauri/tests/: sample_pipeline_tests.rs
figma-import/: README.md  game-sprite-forge-app.html
schemas/: atlas.schema.json  gsfpack.schema.json  manifest.schema.json  quality-report.schema.json
scripts/: build-signed-release-dmg.sh  capture-forge-ui-screenshot.mjs  install-local-mac-app.sh  notarization-preflight.sh  package-release-candidate.sh  prepare-manual-qa-fixtures.mjs  run-godot-pack-smoke.sh  run-pre-manual-pipeline-evidence.sh  test-bundled-ffmpeg-evaluation-source.mjs  test-ffmpeg-resolver-source.mjs  test-forge-dev-skill-source.mjs  test-godot-export-source.mjs  test-godot-helper-sample-source.mjs  test-import-panel-source.mjs  test-local-pack-library-source.mjs  test-local-workbench-ux-source.mjs  test-manual-qa-fixtures.mjs  test-notarization-preflight.sh  test-preview-overlay-source.mjs  test-real-ui-followup-fixes-source.mjs  test-real-ui-full-qa-fixes-source.mjs  test-real-ui-issue-fixes-source.mjs  test-recovery-plan-source.mjs  test-ui-language-source.mjs  test-video-segment-source.mjs  test-workflow-focus-source.mjs  (+3 more)
(+116 files in other folders)
